# crewAI

./: README.md
dgtkbyopenai/: README.md  pyproject-old.toml  pyproject.toml
dgtkbyopenai/src/dgtkbyopenai/: crew.py  main.py
dgtkbyopenai/src/dgtkbyopenai/config/: agents.yaml  tasks.yaml
testagent/: README.md  pyproject.toml
testagent/src/testagent/: crew.py  main.py
