[project]
name = "testagent"
version = "0.1.0"
description = "testagent using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<=3.13"
dependencies = [
    "crewai[tools]>=0.76.9,<1.0.0"
]

[project.scripts]
testagent = "testagent.main:run"
run_crew = "testagent.main:run"
train = "testagent.main:train"
replay = "testagent.main:replay"
test = "testagent.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
